--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"fzaninotto/faker": "^1.5",
-		"laravelcollective/html": "5.0.*"
+		"laravelcollective/html": "5.0.*",
+		"doctrine/dbal": "^2.5"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
