--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "5.0.*",
 		"fzaninotto/faker": "^1.5",
 		"laravelcollective/html": "5.0.*",
-		"doctrine/dbal": "^2.5"
+		"doctrine/dbal": "^2.5",
+		"barryvdh/laravel-debugbar": "^2.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
