--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"laravelcollective/html": "5.0.*",
 		"doctrine/dbal": "^2.5",
 		"barryvdh/laravel-debugbar": "^2.0",
-		"laracasts/flash": "^1.3"
+		"laracasts/flash": "^1.3",
+		"freshwork/chilean-bundle": "^1.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
